[gd_scene format=3 uid="uid://cwsga41scoj2d"]

[ext_resource type="Script" uid="uid://nd3oojjoo2t0" path="res://scripts/game.gd" id="1_feb5d"]
[ext_resource type="Texture2D" uid="uid://bb0ayseyh1uv8" path="res://assets/ham.png" id="2_fc0e3"]
[ext_resource type="Script" uid="uid://bc2u7vb4gvivw" path="res://scripts/burger.gd" id="3_fc0e3"]
[ext_resource type="FontFile" uid="uid://bh6jvsa7eqolq" path="res://text/Jersey10-Regular.ttf" id="4_fc0e3"]
[ext_resource type="Texture2D" uid="uid://cn1ke6hsw4ouk" path="res://assets/shop area.png" id="5_7jktm"]
[ext_resource type="Texture2D" uid="uid://cffymdsilj704" path="res://assets/BUTTERR.png" id="6_hve3p"]
[ext_resource type="Texture2D" uid="uid://cvwamqierilmm" path="res://assets/FONT AREA.png" id="7_iotsf"]
[ext_resource type="Texture2D" uid="uid://d2bt51p85fqq2" path="res://assets/MEATT.png" id="7_mfdv2"]
[ext_resource type="Texture2D" uid="uid://b4x7k8ju3bvf" path="res://assets/FIREEE.png" id="8_iotsf"]
[ext_resource type="Texture2D" uid="uid://cqob2i5h2ioeo" path="res://assets/BEEF.png" id="9_lc2xo"]
[ext_resource type="Texture2D" uid="uid://ecustpmd7jm2" path="res://assets/FRIES.png" id="10_215e1"]

[sub_resource type="Animation" id="Animation_feb5d"]
resource_name = "PRESSED"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1, 1), Vector2(1.2, 1.2)]
}

[sub_resource type="Animation" id="Animation_fc0e3"]
resource_name = "hover"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2)]
}

[sub_resource type="Animation" id="Animation_7jktm"]
resource_name = "unhover"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7jktm"]
_data = {
&"PRESSED": SubResource("Animation_feb5d"),
&"hover": SubResource("Animation_fc0e3"),
&"unhover": SubResource("Animation_7jktm")
}

[node name="game" type="Node2D" unique_id=1154392844]
scale = Vector2(10, 10)
script = ExtResource("1_feb5d")

[node name="Camera2D" type="Camera2D" parent="." unique_id=935712582]
position = Vector2(57.599995, 32.399994)

[node name="TextureButton" type="TextureButton" parent="." unique_id=1460265113]
offset_left = 7.2
offset_top = 24.900002
offset_right = 37.3
offset_bottom = 47.000004
pivot_offset = Vector2(16, 16)
texture_normal = ExtResource("2_fc0e3")
ignore_texture_size = true
stretch_mode = 1
script = ExtResource("3_fc0e3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureButton" unique_id=1111794381]
libraries/ = SubResource("AnimationLibrary_7jktm")

[node name="MONEYCOUNT" type="RichTextLabel" parent="." unique_id=1217261146]
offset_left = -0.19999981
offset_top = 4.2
offset_right = 597.6
offset_bottom = 183.2
scale = Vector2(0.07261277, 0.07261277)
theme_override_fonts/normal_font = ExtResource("4_fc0e3")
theme_override_font_sizes/normal_font_size = 160
text = "$ "
horizontal_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1137973250]

[node name="ShopArea" type="Sprite2D" parent="CanvasLayer" unique_id=790074387]
position = Vector2(1010.49994, 323.5)
scale = Vector2(2.9562502, 4.04375)
texture = ExtResource("5_7jktm")

[node name="shop" type="RichTextLabel" parent="CanvasLayer" unique_id=710092178]
offset_left = 797.99994
offset_top = 10.999977
offset_right = 1395.8
offset_bottom = 189.99997
scale = Vector2(0.568708, 0.568708)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 211
theme_override_constants/outline_size = 41
theme_override_fonts/normal_font = ExtResource("4_fc0e3")
theme_override_font_sizes/normal_font_size = 160
text = "shop!"
horizontal_alignment = 1

[node name="buttered buns" type="TextureButton" parent="CanvasLayer" unique_id=185973266]
offset_left = 787.00006
offset_top = 113.99999
offset_right = 819.00006
offset_bottom = 146.0
scale = Vector2(2.1594524, 2.1594524)
texture_normal = ExtResource("6_hve3p")

[node name="FontArea" type="Sprite2D" parent="CanvasLayer/buttered buns" unique_id=1540133920]
position = Vector2(115.77011, 16.148993)
scale = Vector2(1.0345775, 1.0093118)
texture = ExtResource("7_iotsf")

[node name="mystermy meat" type="TextureButton" parent="CanvasLayer" unique_id=449076669]
offset_left = 787.00006
offset_top = 194.0
offset_right = 819.00006
offset_bottom = 226.0
scale = Vector2(2.1594524, 2.1594524)
texture_normal = ExtResource("7_mfdv2")

[node name="cooking meat" type="TextureButton" parent="CanvasLayer" unique_id=1236775112]
offset_left = 787.00006
offset_top = 273.0
offset_right = 819.00006
offset_bottom = 305.0
scale = Vector2(2.1594524, 2.1594524)
texture_normal = ExtResource("8_iotsf")

[node name="use real meat" type="TextureButton" parent="CanvasLayer" unique_id=1514243115]
offset_left = 787.00006
offset_top = 353.0
offset_right = 819.00006
offset_bottom = 385.0
scale = Vector2(2.1594524, 2.1594524)
texture_normal = ExtResource("9_lc2xo")

[node name="serv w_ fried" type="TextureButton" parent="CanvasLayer" unique_id=1318541615]
offset_left = 787.00006
offset_top = 433.0
offset_right = 819.00006
offset_bottom = 465.0
scale = Vector2(2.1594524, 2.1594524)
texture_normal = ExtResource("10_215e1")

[connection signal="mouse_entered" from="TextureButton" to="TextureButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="TextureButton" method="_on_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="TextureButton" to="TextureButton" method="_on_pressed"]
